# GE-Man

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  create-release.sh
gehelper/: Cargo.toml
gehelper-lib/: Cargo.toml
gehelper-lib/src/: archive.rs  config.rs  error.rs  lib.rs  tag.rs
gehelper-lib/src/download/: github.rs  mod.rs  response.rs
gehelper-lib/tests/resources/: github_api_response.json
gehelper-lib/tests/resources/assets/: config-no-compat-tool-attr.vdf  config-no-default-version.vdf  test-gz.sha512sum  test-xz.sha512sum  test.tar.xz  wine-no-version.yml
gehelper-lib/tests/resources/responses/releases/: proton-ge-release.json  wine-ge-lol-release.json
gehelper-lib/tests/resources/responses/tags/: wine_ge.json
gehelper/src/: args.rs  clap.rs  data.rs  error.rs  filesystem.rs  lib.rs  main.rs  path.rs  progress.rs  ui.rs  version.rs
gehelper/tests/resources/: mod.rs
gehelper/tests/resources/assets/: Proton-6.19-GE-1.sha512sum  Wine-6.19-GE-1.sha512sum  Wine-6.20-GE-1-LoL-xz.sha512sum  Wine-6.20-GE-1-LoL.tar.xz  Wine-6.20-GE-1.tar.xz  Wine-6.20-GE-2.sha512sum  config.vdf  test.sha512sum
gehelper/tests/resources/managed_versions_json/in_use/: every_version.json  every_version_multiple.json  proton.json
gehelper/tests/resources/managed_versions_json/unformatted/: lol.json  proton.json
gehelper/tests/resources/managed_versions_json/unused/: every_version.json  every_version_multiple.json  latest_versions_test.json  lol.json  proton.json  proton_multiple.json  wine.json
gehelper/tests/resources/responses/releases/: wine-ge-release.json
gehelper/tests/resources/responses/tags/: wine_ge_lol.json
src/: args.rs  clap.rs  command_execution.rs  command_input.rs  compat_tool_app.rs  config.rs  data.rs  filesystem.rs  label.rs  lib.rs  main.rs  message.rs  path.rs  progress.rs  ui.rs  version.rs
test_resources/assets/: Proton-6.19-GE-2.sha512sum  Proton-6.20-GE-1.sha512sum  Proton-6.20-GE-2.sha512sum  Wine-6.16-2-GE-LoL.sha512sum  Wine-6.16-GE-3-LoL.sha512sum  Wine-6.19-GE-2.sha512sum  Wine-6.20-GE-1-xz.sha512sum  Wine-6.20-GE-1.sha512sum  wine.yml
test_resources/config/: steam_path_set.yml  steam_path_set_with_env.yml
test_resources/managed_versions_json/in_use/: latest_versions_test.json  lol.json  proton_and_wine.json  proton_multiple.json  wine.json
test_resources/managed_versions_json/unformatted/: wine.json
test_resources/managed_versions_json/unused/: proton_and_wine.json
