[package]
name = "ge-man"
version = "0.1.0"
edition = "2021"
keywords = ["GloriousEgroll", "Steam", "Lutris", "GE-Proton", "Wine-GE"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A manager for GE Proton and Wine GE versions."
repository = "https://github.com/Compile-Time/GE-Man"

[[bin]]
name = "geman"
path = "src/main.rs"

[dependencies]
ge-man-lib = { path = "../ge-man-lib", version = "0.1.0" }
clap = { version = "3.1.6", features = ["cargo"] }
lazy_static = "1.4"
indicatif = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.3"
anyhow = "1.0.52"

[dev-dependencies]
test-case = "1.2"
httpmock = "0.6"
assert_fs = "1.0"
predicates = "2.0"
mockall = "0.11"
