[package]
name = "ge-man"
version = "0.1.1"
edition = "2021"
keywords = ["GloriousEgroll", "Steam", "Lutris", "GE-Proton", "Wine-GE"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A manager for GE Proton and Wine GE versions."
repository = "https://github.com/Compile-Time/GE-Man"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[[bin]]
name = "geman"
path = "src/main.rs"

[dependencies]
ge-man-lib = { path = "../ge-man-lib", version = "0.1.1" }
clap = { version = "3.2.5", features = ["cargo"] }
lazy_static = "1.4.0"
indicatif = "0.16.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
itertools = "0.10.3"
anyhow = "1.0.57"

[dev-dependencies]
test-case = "2.1.0"
httpmock = "0.6.6"
assert_fs = "1.0.7"
predicates = "2.1.1"
mockall = "0.11.1"

[features]
vendored-openssl = ["ge-man-lib/vendored-openssl"]
