[package]
name = "ge-man"
version = "0.1.2"
edition = "2021"
keywords = ["GloriousEgroll", "Steam", "Lutris", "GE-Proton", "Wine-GE"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A manager for GE Proton and Wine GE versions."
repository = "https://github.com/Compile-Time/GE-Man"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[[bin]]
name = "geman"
path = "src/main.rs"

[dependencies]
ge-man-lib = { path = "../ge-man-lib", version = "0.1.1" }
clap = { version = "3.2.5", features = ["cargo"] }
lazy_static = "1.4.0"
indicatif = "0.16.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8"
anyhow = "1.0.57"
thiserror = "1.0.31"
regex = "1.5"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
test-case = "2.2.1"
httpmock = "0.6.6"
assert_fs = "1.0.7"
predicates = "2.1.1"
mockall = "0.11.1"

[features]
vendored-openssl = ["ge-man-lib/vendored-openssl"]
